some changes for db